syntax = "proto3";
package pb;

option go_package = "internal/infra/grpc/pb";

import "internal/infra/grpc/protofiles/shared.proto";

message CreateOrderRequest {
  string id = 1;
  float price = 2;
  float tax = 3;
}

service CreateOrderService {
  rpc CreateOrder(CreateOrderRequest) returns (Order);
}