syntax = "proto3";
package pb;

option go_package = "internal/infra/grpc/pb";

// Reusable message definitions
message Blank {}

message Order {
  string id = 1;
  float price = 2;
  float tax = 3;
  float final_price = 4;
  bool exists = 5;
}

message GetOrdersResponse {
  repeated Order orders = 1;
}